# workspace-rag-search

./: .gitignore  README.md  async_ollama_embedding_function.py  ollama_config.py  pyproject.toml  requirements.txt  workspace_rag_search_tool.py
_examples/: example.py  example_in.json
bm25/: __init__.py  bm25_adpt.py  bm25_scorer.py  bm25l.py  bm25plus.py  bm25t.py
cache/: __init__.py  cache.py
hyde/: __init__.py  hyde.py
mmr/: __init__.py  mmr.py
reranker/: __init__.py  reranker.py
rrf/: __init__.py  rrf.py
tests/: test_bm25_comparison.py  test_cache.py  test_hyde.py  test_mmr.py  test_rerank_comparison.py  test_reranker.py  test_rrf.py
utils/: __init__.py  file_utils.py  gitignore_utils.py  path_utils.py
